fixed option filter for existing activities in addActivityForm to display all activities if Activity panel doesn't exist changed modal overflow-y scroll to auto

--- a/src/general/modal.css
+++ b/src/general/modal.css
@@ -15,7 +15,7 @@
     left: 10%;
     width: 80%;
     max-height: 80vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     box-sizing: border-box;
     background-color: white;
     padding: 30px;
